2009-03-24  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	parallel-tests: per-extension test driver: <EXT>_LOG_COMPILER.
	For test files with extension <ext>, introduce the internal
	variable <EXT>_LOG_COMPILE, which expands to
	$(<EXT>_LOG_COMPILER) $(AM_<EXT>_LOG_FLAGS) $(<EXT>_LOG_FLAGS).
	Turn also the lib/Automake/tests testsuite over to the new
	test driver.
	* doc/automake.texi (Tests): Document `EXT_LOG_COMPILER' and
	`EXT_LOG_FLAGS'.
	* lib/am/check2.am: Insert `%COMPILE%' right before test.
	* automake.in (handle_tests): Substitute `COMPILE' for check2,
	empty for tests without extension, and `$(ext_LOG_COMPILE)' for
	extension `ext'.  In the latter case, define it from the public
	components.
	* configure.ac (AM_INIT_AUTOMAKE): Use `parallel-test' globally.
	* tests/Makefile.am (AUTOMAKE_OPTIONS): Remove, not needed here
	any more.
	* lib/Automake/tests/Makefile.am (TESTS_ENVIRONMENT): Split ...
	(PL_LOG_COMPILER, PL_LOG_FLAGS): ... into these new variables.
	(TESTS_EXTENSIONS): New variable, initialize to `.pl'.
	* tests/parallel-tests7.test: New test.
	* tests/Makefile.am: Update.
	Suggestion by Akim Demaille.

2009-03-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	parallel-tests: also record logs of SKIPped tests.
	* lib/am/check.am [PARALLEL_TESTS] ($(TEST_SUITE_LOG)): Record
	SKIPs as well.
	Suggested by Jim Meyering.

	Minor optimization in parallel-tests text box creation.
	* lib/am/check.am [PARALLEL-TESTS] (am__text_box): Use only one
	awk invocation, rather than several tools, to create a text box.
	Suggestion from Akim Demaille.

2009-03-11  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Fix LAZY_TEST_SUITE handling and $(TEST_SUITE_LOG) recreation.
	* lib/am/check.am (check-TESTS): Expand `$(TEST_LOGS)' only once
	in the rule command, for systems with low command line limits.
	Remove $(TEST_SUITE_LOG) even in LAZY_TEST_SUITE mode.
	($(TEST_SUITE_LOG)): Always recreate $(TEST_SUITE_LOG).  Mention
	lazy mode in the summary output.