@@ -266,11 +266,11 @@ check-TESTS:
 # Be sure to run check-TESTS first, and then to convert the result.
 # Beware of concurrent executions.  And expect check-TESTS to fail.
 check-html:
-	@if $(MAKE) $(AM_MAKEFLAGS) check-TESTS; then :; else	\
-	  rv=$$?;						\
-	  $(MAKE) $(AM_MAKEFLAGS) $(TEST_SUITE_HTML);		\
-	  exit $$rv;						\
-	fi
+	@if $(MAKE) $(AM_MAKEFLAGS) check-TESTS; then		\
+	  rv=0; else rv=$$?;					\
+	fi;							\
+	$(MAKE) $(AM_MAKEFLAGS) $(TEST_SUITE_HTML) || exit 4;	\
+	exit $$rv
 .PHONY: check-html
 .MAKE: check-html
 
