@@ -1,3 +1,10 @@
+2009-03-28  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	check-html: Always create HTML output, note conversion failure.
+	* lib/am/check.am (check-html): Create `$(TEST_SUITE_HTML)' in
+	any case.  Exit unsuccessfully if HTML creation failed.
+	* tests/parallel-tests2.test: Amend test to expose this.
+
 2009-03-24  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	parallel-tests: per-extension test driver: <EXT>_LOG_COMPILER.
